--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,12 @@
   <head>
     <title>Pyssla</title>
     <link rel="stylesheet" href="https://unpkg.com/jcrop/dist/jcrop.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://unpkg.com/jcrop"></script>
     <style>
 #cropped {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  /* height: 200px; */
   image-rendering: crisp-edges;
 }
     </style>
