--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/jcrop"></script>
     <style>
 #cropped {
-  width: 100%;
+  /* width: 100%; */
   /* height: 200px; */
   image-rendering: crisp-edges;
 }
