--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,14 +6,16 @@
     <script src="https://unpkg.com/jcrop"></script>
     <style>
 #cropped {
-  /* width: 100%; */
+  width: 100px;
   /* height: 200px; */
   image-rendering: crisp-edges;
 }
     </style>
   </head>
   <body>
-    <h1>Bügelperle it!</h1>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="/">Pyssla</a>
+    </nav>
 
     <%= yield %>
   </body>
