--- a/views/index.erb
+++ b/views/index.erb
@@ -70,10 +70,10 @@ window.onload = function() {
       <label for="width">Pyssla dimensions</label>
       <div class="form-row">
         <div class="col-md-2 mb-2">
-          <input type="number" id="width" min="1" class="form-control" placeholder="w" value="29" onchange="updateRatio();">
+          <input type="number" id="width" min="1" max="100" class="form-control" placeholder="w" value="29" onchange="updateRatio();">
         </div>
         <div class="col-md-2 mb-2">
-          <input type="number" id="height" min="1" class="form-control" placeholder="h" value="29" onchange="updateRatio();">
+          <input type="number" id="height" min="1" max="100" class="form-control" placeholder="h" value="29" onchange="updateRatio();">
         </div>
       </div>
     </div>
