--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Pyssla</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/jcrop/dist/jcrop.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://unpkg.com/jcrop"></script>
