--- a/views/index.erb
+++ b/views/index.erb
@@ -94,6 +94,6 @@ window.onload = function() {
           <a id="btnHTML" class="btn btn-primary" href="#" role="button">Download HTML</a>
         </div>
       </div>
-    <div>
+    </div>
   </div>
 </div>
